--- a/text-presentation-feature/src/main/res/values/strings.xml
+++ b/text-presentation-feature/src/main/res/values/strings.xml
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string name="edit_button">Edit</string>
-</resources>
+<resources></resources>
